2007-05-30  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (calculate): Make sure that the calculate()
	method does not trash the existing datetime().

2007-02-05  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Angle/Hour.pm: Fix constructor so that it
	correctly recognizes decimal hours.

2006-10-18  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Offset.pm (system): Allow B1900 and J2006.4 etc
	as offset system.

2006-01-09  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Offset.pm (new): Allow for case-insensitive
	keys in constructor.  Allow "Az/El" to be a synonym for AZEL.

2005-12-08  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Offset.pm (invert): Add invert method

	* lib/Astro/Coords/Angle.pm (negate): Add negate method

	* lib/Astro/Coords/Offset.pm (clone): Add clone method

	* lib/Astro/Coords/Angle.pm (clone): Add clone method

	* lib/Astro/Coords/Offset.pm: Add DIRECT offset projection to match PTCS

2005-12-05  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Offset.pm (posang): Add posang() method.

2005-10-28  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (datetime_is_unsafe): Implement caching
	scheme for static dates. datetime_is_unsafe() method is required
	if the datetime object is to be tweaked externally. Large speed
	improvements.

2005-10-21  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (vbary): Add support for Barycentric velocities.

2005-08-24  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Equatorial.pm (set_vel_pars): Add ability to
	set the velocity parameters after object construction (but not in
	base class)

2005-08-06  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords/Fixed.pm: Override default meridian_time and
	transit_el calculations for fixed sources.

	* lib/Astro/Coords.pm (status): Allow meridian time and transit
	elevation to be undef.

2005-07-30  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (calculate): Fix missing DateTime check in