@@ -1,3 +1,8 @@
+2008-04-09  Tim Jenness  <tjenness@cpan.org>
+	
+	* lib/Astro/Coords.pm (_lst): Fix problems with fractional seconds in LST
+	calculation and in datetime cloning.
+
 2007-05-30  Tim Jenness  <tjenness@cpan.org>
 
 	* lib/Astro/Coords.pm (calculate): Make sure that the calculate()
